(fix) fixes weird spacing in nav buttons on tablet view

--- a/src/styles/css/index.css
+++ b/src/styles/css/index.css
@@ -241,7 +241,6 @@ footer {
     font-size: 15pt;
     font-weight: 500;
     justify-content: center;
-    margin: 0 .75rem;
     padding: .3rem 0;
     width: 7rem; } }
 .nav-button-ultramarine-active, .nav-button-ultramarine:hover {
@@ -271,7 +270,6 @@ footer {
     font-size: 15pt;
     font-weight: 500;
     justify-content: center;
-    margin: 0 .75rem;
     padding: .3rem 0;
     width: 7rem; } }
 .nav-button-berry-active, .nav-button-berry:hover {
@@ -301,7 +299,6 @@ footer {
     font-size: 15pt;
     font-weight: 500;
     justify-content: center;
-    margin: 0 .75rem;
     padding: .3rem 0;
     width: 7rem; } }
 .mobile-nav-footer {
